--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,11 @@
 
 <head>
   <link rel='icon' type='image/png' href='/images/logo.png'>
-  <meta name='keywords' content='tanks, fun, online, battle, combat, pixel tanks'>
-  <meta name='description' content='fun online tank app where you can battle your friends'>
   <script async src='https://arc.io/widget.min.js#N3KzQsou'></script>
-  <script src='/js/JSON.js'></script>
-  <script src='/bower_components/pathfinding/pathfinding-browser.min.js'></script>
-  <title>Pixel Tanks</title>
+  <script src='https://cs6413110.github.io/Pixel-Tanks/public/js/JSON.js'></script>
 </head>
 
 <body>
-  <div id='absolute'>
-    <a onclick="window.open('https://forms.gle/uLsato3tu4DaQJM77')">Vote</a>
-  </div>
   <script src='/js/pixel-tanks.js'></script>
 </body>
 
@@ -37,21 +30,10 @@
     overflow: hidden;
     text-align: center;
   }
-
-  #absolute {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-
-  #absolute a {
-    color: black;
-    font-size: 20px;
-  }
-
+  
   canvas {
     display: inline;
-    cursor: url(/images/cursor.png) 16 16, auto;
+    cursor: url(/Pixel-Tanks/public/images/cursor.png) 16 16, auto;
   }
 
 </style>
