--- a/editor.html
+++ b/editor.html
@@ -14,6 +14,7 @@ const button_key = {
   'B3': 'Gold Block',
   'B4': 'Barrier Block',
   'B5': 'Void Block',
+  'B6': 'Oil Barrel',
   'A0': 'Turret',
   'A1': 'Attacking AI',
   'A2': 'Supporting AI',
@@ -31,6 +32,7 @@ const image_key = {
   'B3': 'blocks/gold',
   'B4': 'blocks/barrier',
   'B5': 'blocks/void',
+  'B6': 'blocks/barrel',
   'A0': 'tanks/base',
   'A1': 'tanks/base',
   'A2': 'tanks/base',
