--- a/editor.html
+++ b/editor.html
@@ -15,6 +15,7 @@ const button_key = {
   'B4': 'Barrier Block',
   'B5': 'Void Block',
   'B6': 'Oil Barrel',
+  'B7': 'Half Slab Barrier',
   'A0': 'Turret',
   'A1': 'Attacking AI',
   'A2': 'Supporting AI',
@@ -33,6 +34,7 @@ const image_key = {
   'B4': 'blocks/barrier',
   'B5': 'blocks/void',
   'B6': 'blocks/barrel',
+  'B7': 'blocks/halfbarrier',
   'A0': 'tanks/base',
   'A1': 'tanks/base',
   'A2': 'tanks/base',
